# fast_api_booking_v2

./: .env  .gitignore  main.py  pydantic_template_and_example.py  pyproject.toml  requirements.txt  test_async.ipynb
src/: config.py  database.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_31_0215-6b16f58b53f0_add_rooms.py  2025_06_13_0157-ee98a5112501_add_users.py  2025_06_14_1805-35b7e9f4fc51_email_unique.py  2025_06_18_1109-f4fa357bcad3_add_model_bookings.py  2025_06_25_0643-6cc78d45c3e9_add_model_facilities_room_facilities.py  745c43ba4422_init_migrations.py
src/models/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facitilies.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
